--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Emilys+Candy&display=swap");
 
 * {
     padding: 0;
@@ -12,7 +12,8 @@ a {
     text-decoration: none;
 }
 
-html, body {
+html,
+body {
     background: #fff;
 }
 
@@ -44,9 +45,11 @@ html, body {
 .clip-center {
     overflow: hidden;
     position: relative;
+    background: #fff;
     width: 100vw;
     height: 33.3vh;
     top: 33.3vh;
+    z-index: 2;
 }
 
 .marquee {
@@ -82,6 +85,16 @@ html, body {
     justify-content: space-between;
     font-size: 14px;
 }
+.container video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    object-fit: cover;
+    z-index: -1;
+}
 
 .container .nav,
 .container .footer {
@@ -92,23 +105,15 @@ html, body {
     padding: 2em 4em;
 }
 
+.container .nav .logo {
+    font-size: 24px;
+}
+
 .nav-items a {
     color: #000;
+    font-size: 22px;
 }
 
 .nav-items a:not(:last-child) {
-    padding-right: 4em;
+    padding-right: 1em;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
